# image-manager

./: package-lock.json  package.json  yougo.md
src/: BaseGrid.tsx  ImageFolder.tsx  ImageList.tsx  TabBase.tsx  main.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/libs/file-reader/: Cargo.toml
src-tauri/libs/file-reader/src/: lib.rs
src-tauri/libs/userdata-manage/: Cargo.toml
src-tauri/libs/userdata-manage/src/: lib.rs
src-tauri/src/: lib.rs  main.rs
