[package]
name = "image-manager"
version = "0.1.0"
description = "mange image and view"
authors = ["dev.relick"]
edition = "2021"

[lib]
name = "image_manager_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32.1", features = ["bundled"] }
file-reader = { path = "./libs/file-reader" }
userdata-manage = { path = "./libs/userdata-manage" }
